--- a/Views/DeliveryDriver/Index.cshtml
+++ b/Views/DeliveryDriver/Index.cshtml
@@ -102,7 +102,7 @@
         </div>
     </section>
 
-    <section class="no-top no-bottom text-light" id="section-subscribe-no-bg" data-bgimage="url(images/background/2.jpg) center" data-stellar-background-ratio=".2">
+    @*<section class="no-top no-bottom text-light" id="section-subscribe-no-bg" data-bgimage="url(images/background/2.jpg) center" data-stellar-background-ratio=".2">
         <div class="overlay-gradient">
             <div class="container">
                 <div class="row">
@@ -143,7 +143,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>*@
 
     <section id="pricing-table" class="pb40">
         <div class="container">
@@ -161,13 +161,13 @@
                             <img src="images/icon-shared-hosting.png" class="size96" alt="">
                             <div class="inner">
                                 <div class="clearfix"></div>
-                                <h2>Shared Hosting</h2>
-                                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <h2>Choosing a Domain</h2>
+                                <p>You decide what you would like to call the site and we can find out what is available.
+                                You can also choose from suffixs from all over the world .com .co.uk .uk .wales .me .ltd .london .xyz and many more</p>
                                 <p class="price">
-                                    <span class="txt">Start from</span><span class="currency">$</span>
-                                    <span class="num opt-1">5.59</span>
-                                    <span class="num opt-2">3.45</span>
-                                    <span class="month">p/mo</span>
+                                    <span class="txt">Price from</span><span class="currency">$</span>
+                                    <span class="num opt-1">0.85</span>
+                                    <span class="month">p/year</span>
                                 </p>
                                 <a href="" class="btn-custom">Sign Up Now</a>
                             </div>
@@ -180,8 +180,8 @@
                             <div class="top">
                                 <img src="images/icon-w-vps-hosting.png" class="size96" alt="">
                                 <div class="clearfix"></div>
-                                <h2>VPS Hosting</h2>
-                                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <h2>Choosing a Website Style</h2>
+                                <p>You don't have to be a computer wiz to you don't have to design a website from scratch</p>
                                 <p class="price">
                                     <span class="txt">Start from</span><span class="currency">$</span>
                                     <span class="num opt-1">14.75</span>
@@ -200,7 +200,7 @@
                             <div class="top">
                                 <img src="images/icon-cloud-hosting.png" class="size96" alt="">
                                 <div class="clearfix"></div>
-                                <h2>Cloud Hosting</h2>
+                                <h2>Hosting on the Internet</h2>
                                 <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                                 <p class="price">
                                     <span class="txt">Start from</span><span class="currency">$</span>
