--- a/Views/DeliveryDriver/Index.cshtml
+++ b/Views/DeliveryDriver/Index.cshtml
@@ -102,94 +102,133 @@
         </div>
     </section>
 
-    <section class="no-top no-bottom text-light pb40" id="pricing-table">
+    @*<section class="no-top no-bottom text-light" id="section-subscribe-no-bg" data-bgimage="url(images/background/2.jpg) center" data-stellar-background-ratio=".2">
         <div class="overlay-gradient">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 wow fadeInUp">
-                        <div class="text-center">
-                            <h2><span class="uptitle id-color">Select Your</span>Hosting Plan</h2>
-                            <div class="spacer-20"></div>
-                        </div>
-                    </div>
+                    <div class="col-md-8 offset-md-2">
+                        <form action='blank.php' class="row" id='form_sb' method="post" name="myForm">
+                            <div class="col text-center">
+                                <h3>Search for your perfect domain name</h3>
+                                <div class="spacer-10"></div>
+                                <input class="form-control" id='name_1' name='name_1' placeholder="enter domain name" type='text'> <a href="search-results.html" id="btn-submit"><i class="arrow_right"></i></a>
 
-                    <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                        <div class="pricing-s2 mb30">
-                            <div class="top">
-                                <img src="images/icon-shared-hosting.png" class="size96" alt="">
-                                <div class="inner">
-                                    <div class="clearfix"></div>
-                                    <h2>Choosing a Domain</h2>
-                                    <p>
-                                        You decide what you would like to call the site and we can find out what is available.
-                                        You can also choose from suffixs from all over the world .com .co.uk .uk .wales .me .ltd .london .xyz and many more
-                                    </p>
-                                    <p class="price">
-                                        <span class="txt">Price from</span><span class="currency">$</span>
-                                        <span class="num opt-1">0.85</span>
-                                        <span class="month">p/year</span>
-                                    </p>
-                                    <a href="" class="btn-custom">Sign Up Now</a>
+                                <div class="clearfix"></div>
+                                <div class="spacer-10"></div>
+                                <div class="domain-ext">
+                                    <div class="ext">
+                                        <h4>.com</h4> $4.99/year
+                                    </div>
+
+                                    <div class="ext">
+                                        <h4>.net</h4> $3.99/year
+                                    </div>
+
+                                    <div class="ext">
+                                        <h4>.co</h4> $2.99/year
+                                    </div>
+
+                                    <div class="ext">
+                                        <h4>.info</h4> $3.90/year
+                                    </div>
+
+                                    <div class="ext">
+                                        <h4>.biz</h4> $5.99/year
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                            <div class="clearfix"></div>
+                        </form>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                        <div class="pricing-s2 bg rec mb30 text-light" data-bgimage="url(images/misc/bg-small-1.jpg)">
-                            <div class="inner">
-                                <div class="top">
-                                    <img src="images/icon-w-vps-hosting.png" class="size96" alt="">
-                                    <div class="clearfix"></div>
-                                    <h2>Choosing a Website Style</h2>
-                                    <p>You don't have to be a computer wiz to you don't have to design a website from scratch</p>
-                                    <p class="price">
-                                        <span class="txt">Start from</span><span class="currency">$</span>
-                                        <span class="num opt-1">14.75</span>
-                                        <span class="num opt-2">12.25</span>
-                                        <span class="month">p/mo</span>
-                                    </p>
-                                    <a href="" class="btn-custom">Sign Up Now</a>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                        <div class="pricing-s2 mb30">
-                            <div class="inner">
-                                <div class="top">
-                                    <img src="images/icon-cloud-hosting.png" class="size96" alt="">
-                                    <div class="clearfix"></div>
-                                    <h2>Hosting on the Internet</h2>
-                                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                                    <p class="price">
-                                        <span class="txt">Start from</span><span class="currency">$</span>
-                                        <span class="num opt-1">18.65</span>
-                                        <span class="num opt-2">16.35</span>
-                                        <span class="month">p/mo</span>
-                                    </p>
-                                    <a href="" class="btn-custom mb10">Sign Up Now</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-12">
-                        <div class="switch-set text-center wow fadeInUp" data-wow-delay=".2s">
-                            <div>Monthly plan</div>
-                            <div>
-                                <input id="sw-1" class="switch" type="checkbox" />
-                            </div>
-                            <div>Yearly plan</div>
-                            <div class="spacer-20"></div>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
+    </section>*@
+
+    <section id="pricing-table" class="pb40">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 wow fadeInUp">
+                    <div class="text-center">
+                        <h2><span class="uptitle id-color">Select Your</span>Hosting Plan</h2>
+                        <div class="spacer-20"></div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="pricing-s2 mb30">
+                        <div class="top">
+                            <img src="images/icon-shared-hosting.png" class="size96" alt="">
+                            <div class="inner">
+                                <div class="clearfix"></div>
+                                <h2>Choosing a Domain</h2>
+                                <p>You decide what you would like to call the site and we can find out what is available.
+                                You can also choose from suffixs from all over the world .com .co.uk .uk .wales .me .ltd .london .xyz and many more</p>
+                                <p class="price">
+                                    <span class="txt">Price from</span><span class="currency">$</span>
+                                    <span class="num opt-1">0.85</span>
+                                    <span class="month">p/year</span>
+                                </p>
+                                <a href="" class="btn-custom">Sign Up Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="pricing-s2 bg rec mb30 text-light" data-bgimage="url(images/misc/bg-small-1.jpg)">
+                        <div class="inner">
+                            <div class="top">
+                                <img src="images/icon-w-vps-hosting.png" class="size96" alt="">
+                                <div class="clearfix"></div>
+                                <h2>Choosing a Website Style</h2>
+                                <p>You don't have to be a computer wiz to you don't have to design a website from scratch</p>
+                                <p class="price">
+                                    <span class="txt">Start from</span><span class="currency">$</span>
+                                    <span class="num opt-1">14.75</span>
+                                    <span class="num opt-2">12.25</span>
+                                    <span class="month">p/mo</span>
+                                </p>
+                                <a href="" class="btn-custom">Sign Up Now</a>
+                                <div class="clearfix"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="pricing-s2 mb30">
+                        <div class="inner">
+                            <div class="top">
+                                <img src="images/icon-cloud-hosting.png" class="size96" alt="">
+                                <div class="clearfix"></div>
+                                <h2>Hosting on the Internet</h2>
+                                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <p class="price">
+                                    <span class="txt">Start from</span><span class="currency">$</span>
+                                    <span class="num opt-1">18.65</span>
+                                    <span class="num opt-2">16.35</span>
+                                    <span class="month">p/mo</span>
+                                </p>
+                                <a href="" class="btn-custom mb10">Sign Up Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-12">
+                    <div class="switch-set text-center wow fadeInUp" data-wow-delay=".2s">
+                        <div>Monthly plan</div>
+                        <div>
+                            <input id="sw-1" class="switch" type="checkbox" />
+                        </div>
+                        <div>Yearly plan</div>
+                        <div class="spacer-20"></div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </section>
-     
+
     <section id="section-banner" class="no-bottom no-top img-fluid bg-gradient-to-right text-light relative pos-top">
         <div class="container">
             <div class="row align-items-center">
