Space issue fixed

--- a/Views/DeliveryDriver/Index.cshtml
+++ b/Views/DeliveryDriver/Index.cshtml
@@ -65,7 +65,7 @@
         </div>
     </section>
 
-    <section id="section-highlight" class="relative pos-top no-top mt-60 no-bg">
+    <section id="section-highlight" class="relative pos-top no-bottom  no-top mt-60 no-bg">
 
         <div class="container">
             <div class="row">
